Bug 271101 - networkmanagement NM backend doesn't build with NetworkManager 0.9
Summary: networkmanagement NM backend doesn't build with NetworkManager 0.9
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Will Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-04-16 15:26 UTC by Andrea Scarpino
Modified: 2011-04-17 02:03 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrea Scarpino 2011-04-16 15:26:40 UTC
Version:           unspecified (using KDE 4.6.2) 
OS:                Linux

error is:

[ 68%] Building CXX object backends/NetworkManager/CMakeFiles/knm_nm.dir/settings/gsmdbus.o                                                                                 
/home/bash/projects/KDE/networkmanagement/backends/NetworkManager/settings/gsmdbus.cpp: In member function ‘virtual void GsmDbus::fromMap(const QVariantMap&)’:             
/home/bash/projects/KDE/networkmanagement/backends/NetworkManager/settings/gsmdbus.cpp:38:31: error: ‘NM_GSM_NETWORK_ANY’ was not declared in this scope
/home/bash/projects/KDE/networkmanagement/backends/NetworkManager/settings/gsmdbus.cpp: In member function ‘virtual QVariantMap GsmDbus::toMap()’:
/home/bash/projects/KDE/networkmanagement/backends/NetworkManager/settings/gsmdbus.cpp:65:33: error: ‘NM_GSM_NETWORK_ANY’ was not declared in this scope
make[2]: *** [backends/NetworkManager/CMakeFiles/knm_nm.dir/settings/gsmdbus.o] Error 1
make[1]: *** [backends/NetworkManager/CMakeFiles/knm_nm.dir/all] Error 2

Reproducible: Always


Actual Results:  
build fails


networkmanager 0.8.998
Comment 1 Andrea Scarpino 2011-04-16 15:31:04 UTC
I forgot to say I'm using the nm09 branch.
Comment 2 Andrea Scarpino 2011-04-16 15:35:25 UTC
Also it fails replacing NM_GSM_NETWORK_ANY with NM_SETTING_GSM_NETWORK_TYPE_ANY in the code, error is:

[ 71%] Building CXX object backends/NetworkManager/CMakeFiles/knm_nm.dir/nmdbussettingsservice.o                                                                            
/home/bash/projects/KDE/networkmanagement/backends/NetworkManager/nmdbussettingsservice.cpp:62:76: error: ‘NM_DBUS_SERVICE_USER_SETTINGS’ was not declared in this scope    
/home/bash/projects/KDE/networkmanagement/backends/NetworkManager/nmdbussettingsservice.cpp: In member function ‘void NMDBusSettingsService::interfaceConnectionActivated()’:
/home/bash/projects/KDE/networkmanagement/backends/NetworkManager/nmdbussettingsservice.cpp:211:5: warning: unused variable ‘d’
make[2]: *** [backends/NetworkManager/CMakeFiles/knm_nm.dir/nmdbussettingsservice.o] Error 1
make[1]: *** [backends/NetworkManager/CMakeFiles/knm_nm.dir/all] Error 2
make: *** [all] Error 2
Comment 3 Lamarque V. Souza 2011-04-17 02:03:59 UTC
Git commit e87ceccadc833e220f73d86352968655cedc0485 by Lamarque V. Souza.
Committed on 17/04/2011 at 02:09.
Pushed by lvsouza into branch 'nm09'.

Fix compilation against NetworkManager-0.8.98.

BUG: 271101

M  +1    -1    backends/NetworkManager/nmdbussettingsservice.cpp     
M  +2    -2    backends/NetworkManager/settings/gsmdbus.cpp     

http://commits.kde.org/networkmanagement/e87ceccadc833e220f73d86352968655cedc0485