Fix compilation against NetworkManager-0.8.98.

BUG: 271101